# meeting_room_support

./: .gitignore  CMakeLists.txt  Install_and_Setup.md  README.md  sdkconfig.defaults
components/: ui.h
components/fonts/: CMakeLists.txt  ui_font_FontZHHH16.c  ui_font_FontZZh16.c  ui_font_FontZZh20.c
components/lv_mem_psram/: CMakeLists.txt  lv_mem_psram.c  lv_mem_psram.h
components/lvgl__lvgl/: CMakeLists.txt
components/lvgl__lvgl/src/misc/: lv_async.c
main/: CMakeLists.txt  aux_udp_protocol.h  main.c  ui_aux_panel.c  ui_aux_panel.h
